--- a/myapp/public/styles.css
+++ b/myapp/public/styles.css
@@ -40,3 +40,45 @@ canvas {
   border-radius: 5px;
   cursor: pointer;
 }
+
+#popup-overlay {
+  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+}
+
+#popup-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+#popup {
+  background: rgba(0, 123, 255, 0.8);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 80vh;
+  width: 600px;
+}
+
+#popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: white;
+}
