--- a/myapp/views/index.pug
+++ b/myapp/views/index.pug
@@ -14,6 +14,15 @@ block content
     div#popup-overlay
       div#popup-container
         div#popup
+          h2 Scores
+          table#score-table
+            thead
+              tr
+                th 
+                  strong Joueur
+                th 
+                  strong Score
+            tbody#score-tableBody
         div#popup-close X
 
   script(type="module" src="main.mjs")
